# orchid

./: .gitignore  Cargo.toml  Makefile
docs/: README.md
docs/architecture/: cli.md  config.md  conversation.md  execution.md  hooks.md  index.md  meta.md  persona.md  project.md  providers.md  storage.md
docs/personas/: base.md  concise.md  engineering.md  meta.md  orchestrator.md
docs/token-efficiency/: index.md  repo-map.md  structured-task-memory.md  tool-result-truncation.md
docs/user-guide/: configuration.md  conversations.md  hooks.md  index.md  installation.md  personas.md  portkey-gateway.md  scripting.md  sending.md  ux-patterns.md
plan/: config-changes.md  openai-client.md  overview.md  provider-trait.md  testing-plan.md
scripts/: count-loc.sh  test-streaming.sh
src/: lib.rs  main.rs  types.rs
src/cli/: mod.rs  output.rs
src/client/: anthropic.rs  base.rs  mod.rs  resolve.rs
src/client/anthropic/: api.rs  messages.rs  mod.rs  sse.rs  wire.rs
src/client/openai/: api.rs  messages.rs  mod.rs  sse.rs  tools.rs  wire.rs
src/client/sse/: mod.rs
src/cmd/: config.rs  create.rs  delete.rs  help.rs  internal_run.rs  list.rs  mod.rs  send.rs  server_action.rs  set.rs  stop.rs
src/config/: mod.rs
src/convo/: id.rs  mod.rs  resolve.rs
src/jsonerr/: mod.rs
src/log/: mod.rs
src/loop/: budget.rs  events.rs  guard.rs  history.rs  lifecycle.rs  mod.rs  resolve.rs  run.rs  stream.rs
src/provider/: mod.rs
src/tools/: bash.rs  fs_edit.rs  fs_read.rs  mod.rs  scope.rs
