[package]
name = "orchid"
version = "0.1.0"
edition = "2021"
authors = ["orchid contributors"]
description = "Minimal headless CLI for LLM conversations"
license = "MIT"
repository = "https://github.com/anthropics/orchid"

[[bin]]
name = "orchid"
path = "src/main.rs"

[lib]
name = "orchid"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
getrandom = "0.2"
hex = "0.4"
reqwest = { version = "0.11", features = ["blocking", "gzip", "stream"] }
nix = { version = "0.27", features = ["signal"] }

[dev-dependencies]
tempfile = "3.0"

